Python folder updates

--- a/Data Types for Data Science_DataCamp/Data Types for Data Science in Python.ipynb
+++ b/Data Types for Data Science_DataCamp/Data Types for Data Science in Python.ipynb
@@ -453,8 +453,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create the empty list: baby_names\n",
     "baby_names = []\n",
@@ -487,8 +489,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Pair up the girl and boy names: pairs\n",
     "pairs = zip(girl_names,boy_names) # these are pre-loaded on the system \n",
@@ -518,8 +522,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create an empty dictionary: names_by_rank\n",
     "names_by_rank = {}\n",
@@ -543,8 +549,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Safely print rank 7 from the names dictionary\n",
     "print(names.get(7))\n",
@@ -557,15 +565,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Dealing w/Nested data"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Print a list of keys from the boy_names dictionary\n",
     "print(boy_names.keys())\n",
@@ -580,15 +592,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Adding and extending dictionaries"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Assign the names_2011 dictionary as the value to the 2011 key of boy_names\n",
     "boy_names[2011] = names_2011\n",
@@ -1399,6 +1415,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
