--- a/Intermediate_Importing_Data_in_Python_DataCamp/Intermediate_Importing_Data_in_Python_DataCamp.ipynb
+++ b/Intermediate_Importing_Data_in_Python_DataCamp/Intermediate_Importing_Data_in_Python_DataCamp.ipynb
@@ -1503,11 +1503,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Diving deep into the Twitter API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API Authentication\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-15T17:01:08.861706Z",
+     "start_time": "2020-07-15T17:01:08.847884Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Import package\n",
+    "import tweepy\n",
+    "\n",
+    "# Store OAuth authentication credentials in relevant variables\n",
+    "access_token = \"1092294848-aHN7DcRP9B4VMTQIhwqOYiB14YkW92fFO8k8EPy\"\n",
+    "access_token_secret = \"X4dHmhPfaksHcQ7SCbmZa2oYBBVSD2g8uIHXsp5CTaksx\"\n",
+    "consumer_key = \"nZ6EA0FxZ293SxGNg8g8aP0HM\"\n",
+    "consumer_secret = \"fJGEodwe3KiKUnsYJC3VRndj7jevVvXbK2D5EiJ2nehafRgA6i\"\n",
+    "\n",
+    "# Pass OAuth details to tweepy's OAuth handler\n",
+    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+    "auth.set_access_token(access_token, access_token_secret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Streaming tweets "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-15T17:08:13.138803Z",
+     "start_time": "2020-07-15T17:08:13.110399Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Initialize Stream listener\n",
+    "l = MyStreamListener()\n",
+    "\n",
+    "# Create your Stream object with authentication\n",
+    "stream = tweepy.Stream(auth, l)\n",
+    "\n",
+    "# Filter Twitter Streams to capture data by the keywords:\n",
+    "stream.filter(track=['clinton', 'trump', 'sanders', 'cruz'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and explore your Twitter data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import package\n",
+    "import json\n",
+    "\n",
+    "# String of path to file: tweets_data_path\n",
+    "tweets_data_path = 'tweets.txt'\n",
+    "\n",
+    "# Initialize empty list to store tweets: tweets_data\n",
+    "tweets_data = []\n",
+    "\n",
+    "# Open connection to file\n",
+    "tweets_file = open(tweets_data_path, \"r\")\n",
+    "\n",
+    "# Read in tweets and store in list: tweets_data\n",
+    "for line in tweets_file:\n",
+    "    tweet = json.loads(line)\n",
+    "    tweets_data.append(tweet)\n",
+    "\n",
+    "# Close connection to file\n",
+    "tweets_file.close()\n",
+    "\n",
+    "# Print the keys of the first tweet dict\n",
+    "print(tweets_data[0].keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Twitter data to DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import package\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Build DataFrame of tweet texts and languages\n",
+    "df = pd.DataFrame(tweets_data, columns=['text', 'lang'])\n",
+    "\n",
+    "# Print head of DataFrame\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A little bit of Twitter text analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize list to store tweet counts\n",
+    "[clinton, trump, sanders, cruz] = [0, 0, 0, 0]\n",
+    "\n",
+    "# Iterate through df, counting the number of tweets in which\n",
+    "# each candidate is mentioned\n",
+    "for index, row in df.iterrows():\n",
+    "    clinton += word_in_text('clinton', row['text'])\n",
+    "    trump += word_in_text('trump', row['text'])\n",
+    "    sanders += word_in_text('sanders', row['text'])\n",
+    "    cruz += word_in_text('cruz', row['text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting Twitter data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import packages\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Set seaborn style\n",
+    "sns.set(color_codes=True)\n",
+    "\n",
+    "# Create a list of labels:cd\n",
+    "cd = ['clinton', 'trump', 'sanders', 'cruz']\n",
+    "\n",
+    "# Plot the bar chart\n",
+    "ax = sns.barplot(cd, [clinton, trump, sanders, cruz])\n",
+    "ax.set(ylabel=\"count\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
